// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly in mobile id given 1`] = `
<div>
  <div
    class="object-panel-item"
    id="mock-infill-id"
  >
    <div
      class="main"
    >
      <button
        aria-checked="false"
        class="ant-switch css-dev-only-do-not-override-hash"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is fillable 1`] = `
<div>
  <div
    class="object-panel-item"
    id="infill"
  >
    <div
      class="main"
    >
      <button
        aria-checked="false"
        class="ant-switch css-dev-only-do-not-override-hash"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is fillable 2`] = `
<div>
  <div
    class="object-panel-item"
    id="infill"
  >
    <div
      class="main"
    >
      <button
        aria-checked="true"
        class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is fillable 3`] = `
<div>
  <div
    class="object-panel-item"
    id="infill"
  >
    <div
      class="main"
    >
      <button
        aria-checked="false"
        class="ant-switch css-dev-only-do-not-override-hash"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is not fillable 1`] = `<div />`;

exports[`should render correctly is fillable 1`] = `
<div>
  <div
    class="option-block"
  >
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly is fillable 2`] = `
<div>
  <div
    class="option-block"
  >
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly is fillable 3`] = `
<div>
  <div
    class="option-block"
  >
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly is not fillable 1`] = `<div />`;

exports[`should render correctly with label 1`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly with label 2`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly with label 3`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly with multiple elements (fillable) 1`] = `
<div>
  <div
    class="option-block"
  >
    <select
      class="select"
      data-placeholder="Infill"
      id="infill"
    >
      <option
        value="fill"
      >
        Fill Engraving Mode
      </option>
      <option
        value="stroke"
      >
        Stroke Mode
      </option>
    </select>
  </div>
</div>
`;

exports[`should render correctly with multiple elements (not fillable) 1`] = `<div />`;
